# Esame_Azzano

./: .gitignore  CMakeLists.txt  README.md  be_evo.test.cpp  graphic.cpp  graphic.hpp  individual.cpp  individual.hpp  logical.cpp  logical.hpp  main.cpp  main.test.cpp  population.cpp  population.hpp  rnghelper.cpp  rnghelper.hpp  roothelper.cpp  roothelper.hpp  simulation.cpp  simulation.hpp
